<resources>
    <string name="app_name">YouthGoBudget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="agriculture_form_description">
        COMMUNITY BUDGET PERFORMANCE AND SERVICE DELIVERY TRACKING TOOL
    </string>
    <string name="agriculture_sector_header">AGRICULTURE SECTOR</string>
    <string name="financial_year_label">Financial Year</string>
    <string name="district_label">District</string>
    <string name="village_label">Village</string>
    <string name="sub_county_label">Town Council</string>
    <string name="parish_label">Parish</string>
    <string name="division_label">Division</string>
    <string name="parish_hint">Parish</string>
    <string name="division_hint">Sub county/ Division/ Town Council</string>
    <string name="village_hint">Village</string>
    <string name="ygb_agent_label">Monitor/YGB Agent</string>
    <string name="ygb_agent_name_label">Full Name</string>
    <string name="ygb_agent_tel_label">Tel</string>
    <string name="ygb_agent_no_label">No</string>
    <string name="telephone_hint">0772241709</string>
    <string name="fullname_hint">Simon Adam</string>
    <string name="agent_number_hint">25554</string>
    <string name="note_text">Note: This tool is completed with the help of sub county production/agriculture/community development officer</string>
    <string name="question_1_text_objective">
        1. Does the sub-county/Division have a substantive agricultural extension worker ?
    </string>
    <string name="question_1_reason_text_edit">Please tell us why the answer is no</string>
    <string name="question_1_reason_label">If no, why?</string>
    <string name="question_2_text">2. BUDGET INFORMATION AND TRANSPARENCY</string>
    <string name="grants_label">Grants</string>
    <string name="extension_service_label">Extension Service</string>
    <string name="development_label">Development</string>
    <string name="expected_approved_label">Expected / Approved</string>
    <string name="amount_received_label">Amount Recieved</string>
    <string name="date_received">Date Recieved</string>
    <string name="date_withdrawn">Date withdrawn</string>
    <string name="date_withdrawn_hint">Date Withdrawn</string>
    <string name="date_received_hint">Date Received</string>
    <string name="amount_received">Amount Received</string>
    <string name="amount_expected">Amount Expected</string>
    <string name="question_2_1_text">2.1 Number of field visits for farmer support conducted during the quarter</string>
    <string name="field_visits_hint">Number Of Field Visits</string>
    <string name="question_2_2_text">2.2 Are there any advisory demonstration community/ meetings
    you conducted during the quarter by the extension work? </string>
    <string name="demonstration_meeting_hint">Please explain</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question_2_3_text">2.3 If yes How many during the qarter</string>
    <string name="number_of_meeting_hint">Number of Meetings</string>
    <string name="question_2_4_text">
        2.4 Mention the areas (Cells/ Villages or parishes) where the meetings or workshops were
        held
    </string>
    <string name="demonstration_meeting_place_name">Place Name</string>
    <string name="question_2_5_text">
        2.5 If No, what are the reasons for not conducting the community meetings on farming
    </string>
    <string name="reason_hint">Please Type Reason Here</string>
    <string name="question_3_0">3.0 EXTENSION SERVICES</string>
    <string name="question_3_1">
        3.1 Are there any advisory services you have extended to individual farmers during the
        quarter? (Obtain schedule)
    </string>
    <string name="question_3_2">
        3.2 If yes How many were done during the quarter
    </string>
    <string name="question_3_3">
        3.3 Mention the areas (Cells/Villages or parishes) where the visits were made
    </string>
    <string name="question_3_4">
        3.4 Number of farmers visited for advisory services during the partner (get contacts and address of at least
        two farmers visited)
    </string>
    <string name="question_3_4_female">Female</string>
    <string name="question_3_4_male">Male</string>
    <string name="question_3_5">
        3.5 If no, what are the reasons for not conducting the farmer advisory services visit
    </string>
    <string name="question_4_introduction">
        4.0 DISTRIBUTION OF INPUTS (OWC)
    </string>
    <string name="question_4_1">
        4.1 Have you given any Agriculture inputs and livestock from Operation Wealth creation and
        or otherwise during the quarter?
    </string>
    <string name="question_4_3">
        4.3 If none, what are the reasons for not providing farmers with agriculture inputs and
        livestock during the quarter
    </string>
    <string name="question_4_3_observation">
        Give any other observations or Challenges
    </string>
    <string name="please_type_here">Please type here</string>
    <string name="question_4_2">
        4.2 If yes what types of inputs and livestock were provided during the quarter ( provide list of
        some of the recipients ) for the different inputs
    </string>
    <string name="inputs_or_planting_materials">Inputs / plant materials</string>
    <string name="date">Date</string>
    <string name="male_that_received_input">Male</string>
    <string name="female_that_received_input">Female</string>
    <string name="sub_county_or_village">Subcounty / Village</string>
    <string name="expected_or_approved">Expected / Approved</string>
    <string name="grants">Grants</string>
    <string name="extension_services">Extension Service</string>
    <string name="education_sector_header">Education  Sector</string>
    <string name="education_question_1_upe">1. Name of Universal Primary Education [ UPE ] School</string>
    <string name="school_name_hint">Kijjabwmi Primary School</string>
    <string name="education_question_1_note">
        Note: This tool is completed with the help of headteacher
    </string>
    <string name="school_name">School Name</string>
    <string name="school_teachers">Teachers</string>
    <string name="school_name_school_name">School Name</string>
    <string name="school_number_p_7_pupils">Number of P7 pupils*</string>
    <string name="pupil_enrollment">Pupil enrollment</string>
    <string name="number_of_dropout">No of pupils dropping out of school</string>
    <string name="category">CATEGORY</string>
    <string name="male">Male</string>
    <string name="female">FEMALE</string>
    <string name="male_pwds">MALE PWDS</string>
    <string name="female_pwds">FEMALE PWDS</string>
    <string name="total">TOTAL</string>
    <string name="education_question_2_1_dropout">
        2.1  If dropout is registered, please indicate the reasons why children are dropping out of school
    </string>
    <string name="education_question_3_introduction">3. BUDGET INFORMATION</string>
    <string name="education_question_3_header">Budget founds, receipts and release dates</string>
    <string name="education_question_3_grant">Grants</string>
    <string name="education_question_3_capitation_grant">Capitation grant</string>
    <string name="education_question_3_SFG">School Facilitation Grant ( SFG )</string>
    <string name="education_question_3_approved_budget">Approved Budgets</string>
    <string name="education_question_3_budget_released">Budget released (Actual)</string>
    <string name="education_question_3_date_recieved">Date Recieved</string>
    <string name="education_question_3_date_withdrawn">Date Withdrawn</string>
    <string name="education_question_3_1_text">
        3.1 Does the school display budget information for public viewing in any of the following areas?
        Please request for institution bank statement as evidence. ( Tick where appropriate )
    </string>
    <string name="school_notice_board">School Notice Board</string>
    <string name="head_teacher_notice">Head Teacher Notice</string>
    <string name="staff_room">Staff Room</string>
    <string name="displayed">Displayed</string>
    <string name="education_question_3_2_text">
        3.2 State the period to which the budget information relates? ( e.g FY 2018/ 19 one )
    </string>
    <string name="education_question_4_1_text">4. P. 7 TERMLY PERFORMANCE </string>
    <string name="grade_1">Grade 1</string>
    <string name="grade_2">Grade 2</string>
    <string name="grade_3">Grade 3</string>
    <string name="grade_others">Others*</string>
    <string name="education_question_4_1_1_text">
        4.1 How is the current terms performance when compared to last terms ?
    </string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="same">Same</string>
    <string name="education_question_4_2_text">
        4.2 What reason is attribute to the answer ( in 5 above )
    </string>
    <string name="education_question_5_text">5 SANITATION IN THE SCHOOL
   </string>
    <string name="education_question_5_0_text">Sanitation facility</string>
    <string name="education_question_5_pupils">Pupils</string>
    <string name="education_question_5_teachers">Teachers</string>
    <string name="education_question_5_functionality">Functionality</string>
    <string name="education_question_5_facility">Facility</string>
    <string name="education_question_5_number_of_blocks">No. Of Blocks</string>
    <string name="education_question_5_number_of_stances">No. Of Stances</string>
    <string name="education_question_5_male_stances">Male Stances</string>
    <string name="education_question_5_female_stances">Female Stances</string>
    <string name="education_question_5_teacher_male_stances">Male Stances</string>
    <string name="education_question_5_teacher_female_stances">Female Stances</string>
    <string name="education_question_5_teacher_mixed_stances">Mixed Stances</string>
    <string name="education_question_5_functional">Functional</string>
    <string name="education_question_5_none">None</string>
    <string name="education_question_5_toilet">Toilet</string>
    <string name="education_question_5_latrin">Latrine</string>
    <string name="education_question_5_latrine">Latrine</string>
    <string name="education_question_5_VIP_latrine">VIP Latrine</string>
    <string name="education_question_5_FCR_latrine">Female Changing Rooms</string>
    <string name="education_question_5_Urinals">Urinals for boys</string>
    <string name="education_question_5_1_text">
        5.1  Are the school toilet/latrine facilities accessible to pupils with disabilities ?
    </string>
    <string name="education_question_5_2_text">
        5.2  If yes, how accessible are the facilities accessible to pupils with disabilities ?
    </string>
    <string name="revamps">Ramps</string>
    <string name="pwd">Specialized PWD toilets/latrines</string>
    <string name="question_5_2_ramps">Ramps</string>
    <string name="question_5_2_pwd">Specialized PWD toilet / latrine</string>
    <string name="question_5_2_none">None</string>
    <string name="question_5_2_others">Others ( specify )</string>
    <string name="education_question_2_introduction">2. SCHOOL DETAILS</string>
    <string name="quarter_year_label">Quarter</string>
    <string name="save_and_submit_label">Save And Submit</string>
    <string name="hint_district">District</string>
</resources>