<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    android:background="@color/colorActivityBackground"
    tools:context=".education.EducationActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/education_sector_header"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/agriculture_form_description"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/education_date_text_view"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="23 - October 2020"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <TextView
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/financial_year_label"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <Spinner
            android:id="@+id/financial_year_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:background="@drawable/edit_text_style"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/district_label"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:layout_marginVertical="10dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:hint="@string/village_hint"
            android:id="@+id/district_text_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_style"
            android:autofillHints=""
            android:textSize="15sp"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/village_text_edit"
            android:text="@string/village_label"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:layout_marginVertical="10dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:hint="@string/village_hint"
            android:id="@+id/village_text_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_style"
            android:autofillHints=""
            android:textSize="15sp"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:labelFor="@id/parish_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parish_label"
            android:textSize="15sp"
            android:textColor="@color/white" />

        <EditText
            android:layout_marginBottom="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:hint="@string/parish_hint"
            android:id="@+id/parish_text_edit"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_style"
            android:autofillHints=""
            android:inputType="text"
            android:textSize="15sp"
            tools:ignore="LabelFor" />

        <TextView
            android:labelFor="@id/division_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division_label"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <EditText
            android:layout_marginVertical="10dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/division_hint"
            android:id="@+id/division_text_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_style"
            android:autofillHints=""
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="15sp"
            android:overScrollMode="always"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/ygb_agent_name_label"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginVertical="10dp"
            android:hint="@string/fullname_hint"
            android:inputType="text"
            android:textSize="15sp"
            android:id="@+id/ygb_agent_name_edit_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_style"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ygb_agent_tel_label"
            android:textSize="15sp"
            android:textColor="@color/white" />

        <EditText
            android:layout_marginVertical="10dp"
            android:inputType="phone"
            android:hint="@string/telephone_hint"
            android:id="@+id/ygb_agent_tel_edit_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:background="@drawable/edit_text_style"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education_question_1_note"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <TextView
            android:layout_marginVertical="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education_question_1_upe"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <EditText
            android:layout_marginVertical="10dp"
            android:inputType="text"
            android:hint="@string/school_name_hint"
            android:id="@+id/question_1_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:background="@drawable/edit_text_style"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

        <TextView
            android:layout_marginVertical="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education_question_2_introduction"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>

</ScrollView>