<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    tools:context=".agriculture.AgricultureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/agriculture_sector_header"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/agriculture_form_description"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="23 - October 2020"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold" />


        <TextView
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/financial_year_label"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"/>

        <Spinner
            android:id="@+id/financial_year_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:background="@drawable/edit_text_style"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:hint="@string/hint_district"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/district_text_edit"
            android:text="@string/district_label"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp"/>

        <TextView
            android:hint="@string/hint_district"
            android:layout_marginBottom="10dp"
            android:id="@+id/district_text_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_style"
            android:autofillHints=""
            android:gravity="start|center_vertical"
            android:padding="5dp"
            android:textSize="15sp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_marginBottom="10dp"
            android:labelFor="@id/division_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division_label"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"/>


        <TextView
            android:layout_marginBottom="10dp"
            android:id="@+id/division_text_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_style"
            android:autofillHints=""
            android:gravity="start|center_vertical"
            android:padding="5dp"
            android:textSize="15sp"
            android:hint="@string/division_hint"
            tools:ignore="LabelFor" />

        <TextView
            android:labelFor="@id/parish_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parish_label"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"/>

        <EditText
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:hint="@string/parish_hint"
            android:id="@+id/parish_text_edit"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_style"
            android:autofillHints=""
            android:inputType="text"
            android:textSize="15sp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/village_text_edit"
            android:text="@string/village_label"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp"/>

        <EditText
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:hint="@string/village_hint"
            android:id="@+id/village_text_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_style"
            android:autofillHints=""
            android:textSize="15sp"
            android:inputType="text"
            tools:ignore="LabelFor" />


        <TextView
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quarter_year_label"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"/>

        <Spinner
            android:id="@+id/quarter_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:background="@drawable/edit_text_style"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:text="@string/ygb_agent_name_label"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/fullname_hint"
            android:inputType="text"
            android:textSize="15sp"
            android:id="@+id/ygb_agent_name_edit_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_style"
            android:padding="5dp"
            android:autofillHints="" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ygb_agent_tel_label"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"/>

        <EditText
            android:layout_marginVertical="10dp"
            android:inputType="phone"
            android:hint="@string/telephone_hint"
            android:id="@+id/ygb_agent_tel_edit_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:background="@drawable/edit_text_style"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ygb_agent_no_label"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"/>

        <EditText
            android:layout_marginVertical="10dp"
            android:hint="@string/agent_number_hint"
            android:id="@+id/ygb_agent_no_edit_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_style"
            android:padding="5dp"
            android:textSize="15sp"/>


        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/saved_form_data"
            card_view:cardCornerRadius="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="27dp"
            card_view:cardBackgroundColor="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="@string/save_and_submit_label"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/colorPrimaryTextWhite"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>